# ProektDota2NaAndroeeeeed

Gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
ProjectX_elb/: ElbearSensorHub.cpp  ElbearSensorHub.h  ProjectX_elb.ino  bluetooth.cpp  bluetooth.h  config.h  files.txt  sensors.cpp  sensors.h  sketch.yaml
ProjectX_mega/: ProjectX_mega.ino  Sensors.cpp  Sensors.h
ProjectX_rasp/: autoconnect.sh  bluetooth.py  display.py  mac_bt.txt  server.py  start.sh
The sketches/: Arduino MEGA.fzz
platii/Arduinka/: Arduinka.ino
platii/elbear/: elbear.ino
